[gd_scene load_steps=3 format=2]

[ext_resource path="res://chat.gd" type="Script" id=1]
[ext_resource path="res://ChatUI.gd" type="Script" id=2]

[node name="Control" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )

[node name="AnswerPopup" type="PopupPanel" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0
rect_min_size = Vector2( 300, 50 )

[node name="VBoxContainer" type="VBoxContainer" parent="AnswerPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0

[node name="AnswerOut" type="TextEdit" parent="AnswerPopup/VBoxContainer"]
margin_right = 1010.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )
text = "Answer"

[node name="HSplitContainer" type="HSplitContainer" parent="AnswerPopup/VBoxContainer"]
margin_top = 54.0
margin_right = 1010.0
margin_bottom = 74.0

[node name="Copy" type="Button" parent="AnswerPopup/VBoxContainer/HSplitContainer"]
margin_right = 124.0
margin_bottom = 20.0
text = "Copy to Clipboard"

[node name="Close" type="Button" parent="AnswerPopup/VBoxContainer/HSplitContainer"]
margin_left = 136.0
margin_right = 1010.0
margin_bottom = 20.0
text = "Close"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0
rect_min_size = Vector2( 30, 30 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1010.0
margin_bottom = 31.0
size_flags_horizontal = 3

[node name="ConnectButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 64.0
margin_bottom = 31.0
text = "Connect"

[node name="BootstrapOffer" type="TextEdit" parent="VBoxContainer/HBoxContainer"]
margin_left = 68.0
margin_right = 501.0
margin_bottom = 31.0
rect_min_size = Vector2( 50, 31 )
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="MyOfferButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 505.0
margin_right = 572.0
margin_bottom = 31.0
text = "MyOffer:"

[node name="MyOffer" type="TextEdit" parent="VBoxContainer/HBoxContainer"]
margin_left = 576.0
margin_right = 1010.0
margin_bottom = 31.0
rect_min_size = Vector2( 65, 31 )
size_flags_horizontal = 3

[node name="Log" type="Label" parent="VBoxContainer"]
margin_top = 35.0
margin_right = 1010.0
margin_bottom = 562.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Log"

[node name="Input" type="TextEdit" parent="VBoxContainer"]
margin_top = 566.0
margin_right = 1010.0
margin_bottom = 586.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Input
"

[node name="Node" type="Node" parent="."]
script = ExtResource( 1 )
